[tool.poetry]
name = "rdxt"
version = "0.1.0"
description = "RadixTree implementation in python 3.10"
authors = ["cheetahbyte <bernerdoodle@outlook.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
commitizen-emoji = "^0.1.5"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
